# WinHTop-Py

./: README.md  pyproject.toml
winhtop/: main.py  system_stats.py  ui_components.py
